Fixing issue with PRE tags and wrapping content

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -150,7 +150,9 @@ pre {
 	background-color: transparent;
 	border: 0;
 	white-space: pre-wrap;
-	word-break: break-word;
+	white-space: -moz-pre-wrap;
+	word-break: keep-all;
+	overflow: hidden;
 
 	p {
 		margin: 0;
